# crates/goose-server/src/openapi.rs
@@ -367,6 +367,7 @@ impl<'__s> ToSchema<'__s> for AnnotatedSchema {
         super::routes::config_management::add_extension,
         super::routes::config_management::remove_extension,
         super::routes::config_management::get_extensions,
+        super::routes::extension::generate_extension_from_prompt,
         super::routes::config_management::read_all_config,
         super::routes::config_management::providers,
         super::routes::config_management::get_provider_models,
@@ -412,6 +413,7 @@ impl<'__s> ToSchema<'__s> for AnnotatedSchema {
         super::routes::config_management::ProviderDetails,
         super::routes::config_management::ExtensionResponse,
         super::routes::config_management::ExtensionQuery,
+        super::routes::extension::GenerateExtensionRequest,
         super::routes::config_management::ToolPermission,
         super::routes::config_management::UpsertPermissionsQuery,
         super::routes::config_management::CreateCustomProviderRequest,
